# rules_elixir

./: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  elixir_app.bzl  elixir_app_info.bzl  eval_config.bzl  hex.BUILD.bazel  integration_test.bzl  mix_library.bzl  mix_release.bzl  mix_service_test.bzl  mix_test.bzl  protocol_consolidation.bzl  release.bzl  release_bundle.bzl  service.bzl  sys_config.bzl
bzlmod/: extensions.bzl  git_package.bzl  hex_package.bzl  hex_pm.bzl
bzlmod/private/: BUILD.bazel  common.bzl  elixir_packages.bzl  git_package.bzl  hex_package.bzl  hex_pm.bzl
docs/: building_releases.md  sys_config_generation.md
elixir/: BUILD.bazel
examples/basic/: .bazelrc  BUILD.bazel  MODULE.bazel  mix.exs
examples/basic/test/: helped_test.exs
examples/elixir_release_demo/: .bazelrc  BUILD.bazel  MODULE.bazel  mix.exs  test_release_build.sh
examples/elixir_release_demo/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
examples/elixir_release_demo/lib/elixir_release_demo/: application.ex  server.ex
examples/integration_test_example/: BUILD.bazel  mix.exs
examples/integration_test_example/lib/: itest_example.ex
examples/integration_test_example/test/: itest_example_test.exs
examples/internal-elixir/: .bazelrc  BUILD.bazel  MODULE.bazel  mix.exs
examples/otel/: BUILD.bazel  MODULE.bazel  opentelemetry.BUILD.bazel  opentelemetry_api.BUILD.bazel
examples/plug-sample/: .gitignore  BUILD.bazel  MODULE.bazel  mix.exs
examples/plug-sample/lib/: plug_sample.ex
examples/plug-sample/lib/plug_sample/: application.ex  cli.ex  worker.ex
examples/plug-sample/test/: plug_sample_test.exs
hex/: BUILD.bazel
private/: BUILD.bazel  beam_transitions.bzl  boot_script_inject.bzl  config_inference.bzl  elixir_build.bzl  elixir_bytecode.bzl  elixir_config_action.bzl  elixir_release.bzl  elixir_release_bundle.bzl  elixir_release_info.bzl  elixir_source_build.bzl  elixir_sys_config.bzl  elixir_toolchain.bzl  eval_config.bzl  ex_unit_test.bzl  hex_package.bzl  iex_eval.bzl  integration_test.bzl  merge_beam_dirs.bzl  mix_binary.bzl  mix_env_transitions.bzl  mix_info.bzl  mix_library.bzl  mix_release.bzl  mix_test.bzl  protocol_consolidation.bzl  release_info.bzl  run_mix.tpl.sh  service.bzl  service_info.bzl
repositories/: BUILD_external.tpl  BUILD_internal.tpl  elixir_config.bzl
services/: BUILD.bazel
services/confy/: start_confy.sh
services/etcd/: start_etcd.sh
services/scylla/: docker-compose.yaml  start_scylla.sh
test/: BUILD.bazel  MODULE.bazel  escript_test.sh
tools/: elixir_vars.bzl
tools/boot_script_processor/: BUILD.bazel
tools/boot_script_processor/lib/: boot_script_processor.ex
tools/config_compiler/: BUILD.bazel
tools/config_compiler/lib/: combine_configs.ex
tools/dependency_analyser/: BUILD.bazel  README.md
tools/dependency_analyser/lib/: dependency_analyser.ex
tools/eval_config/: BUILD.bazel  README.md
tools/eval_config/lib/: eval_config.ex
tools/protocol_consolidator/: BUILD.bazel
tools/protocol_consolidator/lib/: protocol_consolidator.ex
tools/sys_config_builder/: BUILD.bazel  README.md
tools/sys_config_builder/lib/: sys_config_builder.ex
