module(
    name = "rules_elixir",
    version = "1.1.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_erlang",
    version = "3.16.0",
)

elixir_config = use_extension(
    "@rules_elixir//bzlmod:extensions.bzl",
    "elixir_config",
)
use_repo(
    elixir_config,
    "elixir_config",
)

register_toolchains(
    "@elixir_config//external:toolchain",
)

# Use elixir_packages extension to get hex_pm
elixir_packages = use_extension(
    "@rules_elixir//bzlmod:extensions.bzl",
    "elixir_packages",
)

elixir_packages.hex_package(
    name = "jason",
    version = "1.4.4",
    sha256 = "c5eb0cab91f094599f94d55bc63409236a8ec69a21a67814529e8d5f6cc90b3b",
    # build_file = "//:jason.BUILD.bazel",
)

use_repo(
    elixir_packages,
    "hex_pm",
    "jason",
)
