"""Base service definitions for Elixir integration testing.

This package provides pre-configured services that can be used as dependencies
for integration tests. Each service is defined with appropriate health checks
and startup configurations.

Usage:

    load("@discord_rules_elixir//:integration_test.bzl", "mix_integration_test")

    mix_integration_test(
        name = "my_test",
        lib = ":my_lib",
        services = [
            "@discord_rules_elixir//services:etcd",
            "@discord_rules_elixir//services:scylla",
        ],
    )
"""

load("//:service.bzl", "dbx_service", "dbx_service_group")

package(default_visibility = ["//visibility:public"])

# ============================================================================
# etcd - Distributed key-value store for service discovery and configuration
# ============================================================================

dbx_service(
    name = "etcd",
    command = "./services/etcd/start_etcd.sh",
    data = ["etcd/start_etcd.sh"],
    env = {
        "ETCD_CLIENT_PORT": "2379",
        "ETCD_PEER_PORT": "2380",
    },
    health_check = {
        "type": "http",
        "route": "/health",
        "port": "2379",
        "max_seconds": "100",
    },
    ports = [
        {"port": 2379, "protocol": "TCP"},
        {"port": 2380, "protocol": "TCP"},
    ],
    stop_wait_seconds = 5,
)

# ============================================================================
# scylla - Cassandra-compatible database (runs via Docker)
# ============================================================================

dbx_service(
    name = "scylla",
    command = "./services/scylla/start_scylla.sh",
    data = [
        "scylla/start_scylla.sh",
        "scylla/docker-compose.yaml",
    ],
    health_check = {
        "type": "command",
        "command": "docker exec scylla-itest cqlsh -e quit",
        "max_seconds": "120",
    },
    ports = [{"port": 9042, "protocol": "TCP"}],
    stop_wait_seconds = 30,
)

# ============================================================================
# confy - Configuration service (depends on etcd)
# ============================================================================

dbx_service(
    name = "confy",
    command = "./services/confy/start_confy.sh",
    data = ["confy/start_confy.sh"],
    deps = [":etcd"],  # confy requires etcd to be running
    env = {
        "CONFY_PORT": "8500",
        "ETCD_URL": "http://localhost:2379",
    },
    health_check = {
        "type": "http",
        "route": "/health",
        "port": "8500",
        "max_seconds": "60",
    },
    ports = [{"port": 8500, "protocol": "TCP"}],
    stop_wait_seconds = 5,
)

# ============================================================================
# Service Groups
# ============================================================================

# Basic infrastructure services (etcd + scylla)
dbx_service_group(
    name = "base_services",
    services = [
        ":etcd",
        ":scylla",
    ],
)

# Full service stack including configuration
dbx_service_group(
    name = "full_services",
    services = [
        ":etcd",
        ":scylla",
        ":confy",
    ],
)
