module(
    name = "basic",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.16.0",
)
archive_override(
    module_name = "rules_erlang",
    integrity = "sha256-Gg1A/QyTHsHarL0EAOLhe2nTHlcnVngJLBZukcGvaOw=",
    strip_prefix = "rules_erlang-b4b01911b99944fa0c9efb66bf3d9030ee784fa9/",
    url = "https://github.com/discord/rules_erlang/archive/b4b01911b99944fa0c9efb66bf3d9030ee784fa9.tar.gz",
)
bazel_dep(
    name = "rules_elixir",
    version = "0.1.0",
)
local_path_override(
    module_name = "rules_elixir",
    path = "..",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)
use_repo(
    erlang_config,
    "erlang_config",
)
