load("@rules_elixir//:elixir_app.bzl", "elixir_app")
load("@rules_elixir//:ex_unit_test.bzl", "ex_unit_test")
load("@rules_erlang//:escript.bzl", "escript_archive")

load("@rules_elixir//:defs.bzl", "mix_library")

mix_library(
    name = "basic",
    # TODO: we should generate this target, and elicit this name from the mix
    # configuration
    app_name = "main",
    mix_config = ":mix.exs",
    srcs = glob(['lib/**/*.ex']),
)

# elixir_app(
#     app_name = "basic",
#     srcs = [
#         "mix.exs",
#     ] + glob(["lib/**/*.ex"]),
# )
# 
# escript_archive(
#     name = "basic",
#     app = ":erlang_app",
#     headers = [
#         "shebang",
#         '{emu_args, "-escript main Elixir.Basic -hidden"}',
#     ],
# )
# 
# ex_unit_test(
#     name = "assertion_test",
#     srcs = [
#         "test/assertion_test.exs",
#     ],
#     env = {
#         "ERL_COMPILER_OPTIONS": "deterministic",
#         "ELIXIR_ERL_OPTIONS": "+fnu",
#     },
# )
# 
# ex_unit_test(
#     name = "helped_test",
#     srcs = [
#         "test/test_helper.exs",
#         "test/helped_test.exs",
#     ],
#     env = {
#         "ERL_COMPILER_OPTIONS": "deterministic",
#         "ELIXIR_ERL_OPTIONS": "+fnu",
#     },
# )
