load("@rules_elixir//:defs.bzl", "elixir_app", "ex_unit_test", "mix_release", "mix_library")
load("@rules_erlang//:escript.bzl", "escript_archive")
load("@rules_erlang//:erlang_erts_layer.bzl", "erlang_erts_layer")
load(":container.bzl", "elixir_container_image")

# elixir_app(
#     app_name = "basic",
# )
# 
# escript_archive(
#     name = "basic",
#     app = ":erlang_app",
#     headers = [
#         "shebang",
#         '{emu_args, "-escript main Elixir.Basic -hidden"}',
#     ],
# )

mix_library(
    name = "erlang_app",
    app_name = "main",
    srcs = glob(["lib/**/*.ex"]),
    mix_config = ":mix.exs",
)

mix_release(
    name = "basic_release",
    app_name = "main",
    application = ":erlang_app",
)

ex_unit_test(
    name = "assertion_test",
    srcs = [
        "test/assertion_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

ex_unit_test(
    name = "helped_test",
    srcs = [
        "test/test_helper.exs",
        "test/helped_test.exs",
    ],
    env = {
        "ERL_COMPILER_OPTIONS": "deterministic",
        "ELIXIR_ERL_OPTIONS": "+fnu",
    },
)

# -- Platforms --
# Bootstrap platform: no CPU constraint, inherits from host.
# Used as the default for BEAM bytecode compilation.
platform(
    name = "erlang_internal_platform",
    constraint_values = [
        "@erlang_config//:erlang_internal",
        "@elixir_config//:elixir_internal",
    ],
    parents = ["@platforms//host:host"],
)

# Architecture-specific platforms for ERTS layer resolution and container builds.
platform(
    name = "erlang_internal_x86_64_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@erlang_config//:erlang_internal",
        "@elixir_config//:elixir_internal",
    ],
)

platform(
    name = "erlang_internal_aarch64_platform",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        "@erlang_config//:erlang_internal",
        "@elixir_config//:elixir_internal",
    ],
)

# -- ERTS layer --
# Resolves the correct ERTS via toolchain. When built under a platform
# transition, the arch-specific toolchain is selected automatically.
erlang_erts_layer(
    name = "erts_layer",
)

# -- Container image --
elixir_container_image(
    name = "basic",
    app_name = "main",
    erts_layer = ":erts_layer",
    release = ":basic_release",
)
